[package]
name = "ipfs-server"
version = "0.1.4"
edition = "2021"
description = """
Simple ipfs server built on rust-ipfs
"""
rust-version = "1.68"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/istamarr/ipfs-server-simple"
authors = ["Istamar Rozid"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-ipfs = "0.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4.1", features = ["derive"] }
zeroize = "1"
base64 = "0.21"
libipld = { version = "0.16", features = ["serde-codec"] }
indicatif = "0.17"
void = "1"
